--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.api.httptests.HttpgetmethodTest" hash-for-method="validatepostuserdetails">validatepostuserdetails</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.api.httptests.HttpgetmethodTest" hash-for-method="validatepostmethodusingpojostyle">validatepostmethodusingpojostyle</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="validatepostuserdetails">
-                  </a> <!-- validatepostuserdetails -->
-                  <span class="method-name">validatepostuserdetails</span>
+                  <a name="validatepostmethodusingpojostyle">
+                  </a> <!-- validatepostmethodusingpojostyle -->
+                  <span class="method-name">validatepostmethodusingpojostyle</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -146,7 +146,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;com.api.httptests.HttpgetmethodTest&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;validatepostuserdetails&quot;/&gt;
+          &lt;include name=&quot;validatepostmethodusingpojostyle&quot;/&gt;
         &lt;/methods&gt;
       &lt;/class&gt; &lt;!-- com.api.httptests.HttpgetmethodTest --&gt;
     &lt;/classes&gt;
@@ -190,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'validatepostuserdetails')
+data.setCell(0, 1, 'validatepostmethodusingpojostyle')
 data.setCell(0, 2, 'com.api.httptests.HttpgetmethodTest')
-data.setCell(0, 3, 1188);
+data.setCell(0, 3, 3787);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -212,12 +212,14 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">com.api.httptests.HttpgetmethodTest</span>
               <div class="ignored-methods-div">
+                <span class="ignored-method-name">validatepostuserdetails</span>
+                <br/>
                 <span class="ignored-method-name">httpgettest</span>
                 <br/>
                 <span class="ignored-method-name">validateapiwitheaders</span>
@@ -238,8 +240,8 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">validatepostuserdetails</span>
-                <span class="method-start">22 ms</span>
+                <span class="method-name">validatepostmethodusingpojostyle</span>
+                <span class="method-start">85 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
