--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a3ffec">  <td>20/07/19 22:08:29</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.api.httptests.HttpgetmethodTest@520a3426]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@665372494</td>   <td></td> </tr>
-<tr bgcolor="d56d67">  <td>20/07/19 22:08:29</td>   <td>15</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpgetmethodTest.validatepostuserdetails()[pri:0, instance:com.api.httptests.HttpgetmethodTest@520a3426]">validatepostuserdetails</td> 
-  <td>main@665372494</td>   <td></td> </tr>
+<tr bgcolor="baeedf">  <td>20/07/21 21:47:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup()[pri:0, instance:com.api.httptests.HttpgetmethodTest@6325a3ee]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1384722895</td>   <td></td> </tr>
+<tr bgcolor="87bdab">  <td>20/07/21 21:47:55</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HttpgetmethodTest.validatepostmethodusingpojostyle()[pri:0, instance:com.api.httptests.HttpgetmethodTest@6325a3ee]">validatepostmethodusingpojostyle</td> 
+  <td>main@1384722895</td>   <td></td> </tr>
 </table>
